test/files/neg/xmltruncated3.check
xmltruncated3.scala:3: error: Input ended while parsing XML

^
one error found
